Update resource and paragraph classification flow
- Delete `stf-label-selection` component
- Create `stf-labels-expander`: a list of expanders containing a checkbox by label
- In resource classification page:
  - replace the `app-label-field` dropdown by `stf-labels-expander`
  - display selected labels in `app-label-list` on the right
- In paragraph classification page:'
  - replace the `app-label-field` dropdown by `stf-labels-expander`
  - remove `stf-label-selection` (selection will be visible in `stf-labels-expander` instead)
- Change background color of selected expander to `$color-neutral-lighter`
- Fix pattern in label.component

--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -508,7 +508,7 @@
 	"resource.add_labels_error": "Beim Hinzufügen von Labels für {{count}} Ressourcen ist ein Fehler aufgetreten",
 	"resource.add_labels_success": "Labels wurden erfolgreich für {{count}} Ressourcen hinzugefügt",
 	"resource.adding_labels": "Etiketten hinzufügen",
-	"resource.classification.clean-up": "Aufräumen",
+	"resource.classification.clean-up": "Bereinigen etikettenauswahl",
 	"resource.classification.no-paragraph-labelset": "Für Absätze ist keine Beschriftung festgelegt. Sie können einige hinzufügen",
 	"resource.classification.no-resource-labelset": "Für Ressourcen ist kein Label festgelegt. Sie können einige hinzufügen",
 	"resource.classification.remove-label": "Etikett aus Auswahl entfernen",
