--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -507,7 +507,7 @@
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
 	"resource.adding_labels": "Afegint etiquetes",
-	"resource.classification.clean-up": "Netejar",
+	"resource.classification.clean-up": "Neteja la selecció d'etiquetes",
 	"resource.classification.no-paragraph-labelset": "No hi ha cap etiqueta establerta per als paràgrafs. Podeu afegir-ne alguns",
 	"resource.classification.no-resource-labelset": "No hi ha cap etiqueta establerta per als recursos. Podeu afegir-ne alguns",
 	"resource.classification.remove-label": "Elimina l'etiqueta de la selecció",
