--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -508,7 +508,7 @@
 	"resource.add_labels_error": "An error occurred while adding labels on {{count}} resources",
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
 	"resource.adding_labels": "Adding labels",
-	"resource.classification.clean-up": "Clean up",
+	"resource.classification.clean-up": "Clean up label selection",
 	"resource.classification.no-paragraph-labelset": "There is no label set for paragraphs. You can add some in",
 	"resource.classification.no-resource-labelset": "There is no label set for resources. You can add some in",
 	"resource.classification.remove-label": "Remove label from selection",
